# spd1

./: CMakeLists.txt  Heur.cpp  Heur.h  Problem.cpp  Problem.h  Schrage_alg.cpp  Schrage_alg.h  Solution.cpp  Solution.h  Task.cpp  Task.h  algorithms.cpp  algorithms.h  main.cpp  utils.cpp  utils.h
dane/: test.txt  test2.txt
